--- a/FacebootClient/nbproject/project.properties
+++ b/FacebootClient/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/FacebootClient
 endorsed.classpath=
 excludes=
 file.reference.FacebootNet.jar=C:\\Users\\Ivy\\Documents\\NetBeansProjects\\FacebootNet\\dist\\FacebootNet.jar
+file.reference.FacebootNet.jar-1=..\\..\\FacebootNet\\dist\\FacebootNet.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.FacebootNet.jar}
+    ${file.reference.FacebootNet.jar}:\
+    ${file.reference.FacebootNet.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
