--- a/FacebootClient/nbproject/private/private.properties
+++ b/FacebootClient/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.FacebootNet.jar=/Users/orlandocamacho/Documents/GitHub/FacebootNe
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/orlandocamacho/Library/Application Support/NetBeans/12.4/build.properties
+user.properties.file=C:\\Users\\Ivy\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
